Fix alignment & color issues in header.

--- a/src/components/tiles/table/table-tile.scss
+++ b/src/components/tiles/table/table-tile.scss
@@ -46,7 +46,7 @@ $controls-hover-background: #c0dfe7;
         input {
           text-align: center;
           border: solid 1.5px $charcoal-light-1;
-
+          background: $header-input-color;
           &:focus {
             border: solid 2px $highlight-blue;
           }
@@ -151,7 +151,7 @@ $controls-hover-background: #c0dfe7;
           padding: 0;
         }
         input {
-          background-color: inherit;
+          background-color: $header-input-color;
         }
       }
       .controls-column-header {
@@ -328,6 +328,7 @@ $controls-hover-background: #c0dfe7;
   border: none;
   padding: 4px;
   box-shadow: inset 0 0 0 3px $highlight-unlinked-edit;
+  overflow: hidden;
 }
 
 
